--- a/gb/19/2/20/n11057150.md
+++ b/gb/19/2/20/n11057150.md
@@ -1,24 +1,24 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ryqken3354/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ryqken3354/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/ryqken3354/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ryqken3354/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/ryqken3354/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ryqken3354/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/ryqken3354/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ryqken3354/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/ryqken3354/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ryqken3354/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/ryqken3354/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ryqken3354/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/ryqken3354/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ryqken3354/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/ryqken3354/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ryqken3354/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/ryqken3354/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ryqken3354/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/ryqken3354/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ryqken3354/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ryqken3354/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ryqken3354/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ryqken3354/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ryqken3354/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ryqken3354/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ryqken3354/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ryqken3354/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ryqken3354/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ryqken3354/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ryqken3354/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ryqken3354/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ryqken3354/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ryqken3354/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/ryqken3354/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/ryqken3354/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ryqken3354/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ryqken3354/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ryqken3354/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ryqken3354/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ryqken3354/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ryqken3354/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ryqken3354/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ryqken3354/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/ryqken3354/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ryqken3354/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ryqken3354/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ryqken3354/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/xsumwp3307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/xsumwp3307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/xsumwp3307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>非洲猪瘟腐尸污染水土 病毒藏人体内危害大</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2012/04/1204221343552212-320x200.jpg" />
+<a href="https://d282b678eon3c.cloudfront.net/E9vQY9p9r"><img width="600" src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/xsumwp3307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
 <h6></h6>
 <hr>
-	<p>【大纪元2019年02月20日讯】（大纪元记者洪宁采访报导）<ahref="https://github.com/ryqken3354/djy/blob/master/gb/tag/%E9%9D%9E%E6%B4%B2%E7%8C%AA%E7%98%9F.md#1">非洲猪瘟</a>病毒在大陆继续扩散，不仅病猪肉早已流向餐桌，大量未经无害化处理的病死猪被私自掩埋、扔弃河里等，对水源土壤造成污染。前中国健康教育研究所所长陈秉中先生指，非洲猪瘟病毒在人体中隐藏的毒害是相当大的，绝对不可忽视。</p>
+	<p>【大纪元2019年02月20日讯】（大纪元记者洪宁采访报导）<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E9%9D%9E%E6%B4%B2%E7%8C%AA%E7%98%9F.md#1">非洲猪瘟</a>病毒在大陆继续扩散，不仅病猪肉早已流向餐桌，大量未经无害化处理的病死猪被私自掩埋、扔弃河里等，对水源土壤造成污染。前中国健康教育研究所所长陈秉中先生指，非洲猪瘟病毒在人体中隐藏的毒害是相当大的，绝对不可忽视。</p>
 <h2>腐烂病猪污染水源、土壤</h2>
-<p>自去年8月辽宁沈阳第一次爆发<ahref="https://github.com/ryqken3354/djy/blob/master/gb/tag/%E9%9D%9E%E6%B4%B2%E7%8C%AA%E7%98%9F.md#1">非洲猪瘟</a><ahref="https://github.com/ryqken3354/djy/blob/master/gb/tag/%E7%96%AB%E6%83%85.md#1">疫情</a>至今，中共当局隐瞒实情，监控治理差，各疫区偷偷买卖、掩埋、丢弃病死猪的现象愈演愈烈。</p>
+<p>自去年8月辽宁沈阳第一次爆发<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E9%9D%9E%E6%B4%B2%E7%8C%AA%E7%98%9F.md#1">非洲猪瘟</a><ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E7%96%AB%E6%83%85.md#1">疫情</a>至今，中共当局隐瞒实情，监控治理差，各疫区偷偷买卖、掩埋、丢弃病死猪的现象愈演愈烈。</p>
 <p>2月12日，江苏连云港灌云县一村民看到该县南岗乡一河沟有大量被丢弃的死猪后，向多个部门举报反映，但无人治理。16日，灌云县政府通报称经检测，排除非洲猪瘟。</p>
 <p>18日网路上出现一段影片，在广西柳州公园的河道中，有大量死猪堆叠，数量至少近50只，腐烂后恶臭扑鼻，推测可能是大雨过后，死猪从上游河段被冲到公园区域。</p>
 <blockquote class="twitter-tweet" data-lang="zh-tw">
-<p dir="ltr" lang="zh">【江苏连云港猪瘟<ahref="https://github.com/ryqken3354/djy/blob/master/gb/tag/%E7%96%AB%E6%83%85.md#1">疫情</a>仍然“触目惊心”】<br />
+<p dir="ltr" lang="zh">【江苏连云港猪瘟<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E7%96%AB%E6%83%85.md#1">疫情</a>仍然“触目惊心”】<br />
 过去一个月，内地媒体已甚少报导非洲猪瘟疫情，中国海关总署亦公布，由于广东惠州博罗县的疫区于2月6日已解封，已恢复11个猪场向香港供应生猪。<br />
 但江苏一位回乡过年的村民，仍然见到遍地死猪。<br />
-台湾方面更质疑大陆政府根本未有掌握真实疫情。#非洲猪瘟?<ahref="https://t.co/hUFrIjkzSM"></a><img width="600" src="https://raw.githubusercontent.com/ryqken3354/www/master/t/ntdtv/twitter.jpg" ><h3 align=center>(twitter视频或图片.国内建议下载<a href="https://github.com/ryqken3354/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a href="hUFrIjkzSM</a></p>
+台湾方面更质疑大陆政府根本未有掌握真实疫情。#非洲猪瘟?<ahref="https://t.co/hUFrIjkzSM"></a><a href="https://d282b678eon3c.cloudfront.net/E9vQY9p9r"><img width="600" src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/ntdtv/twitter.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(twitter视频或图片.国内建议下载<a href="https://github.com/xsumwp3307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a href="hUFrIjkzSM</a></p>
 <p>— 自由亚洲电台 (@RFA_Chinese) <ahref="https://twitter.com/RFA_Chinese/status/1095270812347555842?ref_src=twsrc%5Etfw">2019年2月12日</a></p></blockquote>
 <p><a async="" src="https://platform.twitter.com/widgets.js" charset="utf-8"></a></p>
 <blockquote class="twitter-tweet" data-lang="zh-tw">
-<p dir="ltr" lang="zh">中国政府暗杠隐瞒的非洲猪瘟疫情不知有多少哦 ~ 网友 : 河南新乡获嘉县，封丘县非洲猪瘟特别厉害，村里养殖户猪基本快死光了，姨家和姑姑家几百头猪啊都死了，还有低价收购病死猪的，好像有人一直压着消息 (2019年2月9日) <ahref="https://t.co/neybu4TO7g"></a><img width="600" src="https://raw.githubusercontent.com/ryqken3354/www/master/t/ntdtv/twitter.jpg" ><h3 align=center>(twitter视频或图片.国内建议下载<a href="https://github.com/ryqken3354/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a href="neybu4TO7g</a></p>
+<p dir="ltr" lang="zh">中国政府暗杠隐瞒的非洲猪瘟疫情不知有多少哦 ~ 网友 : 河南新乡获嘉县，封丘县非洲猪瘟特别厉害，村里养殖户猪基本快死光了，姨家和姑姑家几百头猪啊都死了，还有低价收购病死猪的，好像有人一直压着消息 (2019年2月9日) <ahref="https://t.co/neybu4TO7g"></a><a href="https://d282b678eon3c.cloudfront.net/E9vQY9p9r"><img width="600" src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/ntdtv/twitter.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(twitter视频或图片.国内建议下载<a href="https://github.com/xsumwp3307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a href="neybu4TO7g</a></p>
 <p>— malau (@malau94428928) <ahref="https://twitter.com/malau94428928/status/1096719393260589056?ref_src=twsrc%5Etfw">2019年2月16日</a></p></blockquote>
 <p><a async src="https://platform.twitter.com/widgets.js" charset="utf-8"></a></p>
 <p>2月18日，中共农业农村部新闻办公室发布消息称，广西北海市银海区发生非洲猪瘟疫情，两个养殖小区共存栏生猪23,555头，发病1,629头、死亡924头。</p>
@@ -33,7 +33,7 @@
 <p>陈秉中表示，虽然把病猪埋到地里了，但没有严格做无害化焚烧处理，这就是掩耳盗铃，已造成了土壤、水源的污染，很难在十年八年之内彻底解除，将地面上的毒埋到地下了，并没有解决问题，而且自己将成为直接的受害者，所以猪瘟的影响是长期的。</p>
 <blockquote class="twitter-tweet" data-lang="zh-tw">
 <p dir="ltr" lang="zh">2019年2月18号上午，北海市某养猪厂将病（死）猪拉到北海市银海区三合口农场干上分场附近（离居民区约一公里处）进行掩埋！事发地离水源区非常近！<br />
-1 <ahref="https://t.co/eKf11uBtxf"></a><img width="600" src="https://raw.githubusercontent.com/ryqken3354/www/master/t/ntdtv/twitter.jpg" ><h3 align=center>(twitter视频或图片.国内建议下载<a href="https://github.com/ryqken3354/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a href="eKf11uBtxf</a></p>
+1 <ahref="https://t.co/eKf11uBtxf"></a><a href="https://d282b678eon3c.cloudfront.net/E9vQY9p9r"><img width="600" src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/ntdtv/twitter.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(twitter视频或图片.国内建议下载<a href="https://github.com/xsumwp3307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a href="eKf11uBtxf</a></p>
 <p>— 活着 (@tangyongtao1) <ahref="https://twitter.com/tangyongtao1/status/1097446305217994752?ref_src=twsrc%5Etfw">2019年2月18日</a></p></blockquote>
 <p><a async src="https://platform.twitter.com/widgets.js" charset="utf-8"></a></p>
 <h2>腐尸恐引发人畜共通疾病</h2>
@@ -44,39 +44,44 @@
 <p>责任编辑：孙芸</p>
 	
 <hr>
-
+<hr>
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/ryqken3354/djy/blob/master/gb/19/2/16/n11049032.md#1">三全灌汤水饺验出猪瘟病毒 股价下跌3.58%</a></li>
-<li><a href="https://github.com/ryqken3354/djy/blob/master/gb/19/2/19/n11055354.md#1">广西首爆非洲猪瘟疫情 近千头生猪死亡</a></li>
-<li><a href="https://github.com/ryqken3354/djy/blob/master/gb/19/2/19/n11056016.md#1">非洲猪瘟肆虐 大陆冷冻食品业几乎全沦陷</a></li>
-<li><a href="https://github.com/ryqken3354/djy/blob/master/gb/20/8/6/n12310251.md#1">每日三退声明精选（2020/08/05）</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/19/2/16/n11049032.md#1">三全灌汤水饺验出猪瘟病毒 股价下跌3.58%</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/19/2/19/n11055354.md#1">广西首爆非洲猪瘟疫情 近千头生猪死亡</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/19/2/19/n11056016.md#1">非洲猪瘟肆虐 大陆冷冻食品业几乎全沦陷</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/19/n13740936.md#1">三退声明精选（2022/05/18）</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/1/n11559430.md#1" target="_blank">林辉： 中共70年来的成功与未遂政变</a></li><li><a href="https://github.com/ryqken3354/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/10/n11247031.md#1" target="_blank">加拿大渥太华市长连续9年宣布 法轮大法日</a></li>
-<hr>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/8/n11372651.md#1" target="_blank">新州：豢养特务作恶 中共卑鄙无耻</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/13/5/19/n3874295.md#1" target="_blank">飞瀑：中共酷刑——灌水</a></li><hr>
+
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/ryqken3354/djy/blob/master/gb/20/8/5/n12307751.md#1">大陆多省现新布尼亚病毒 已致7死 可人传人</a></li>
-<li><a href="https://github.com/ryqken3354/djy/blob/master/gb/20/8/4/n12306655.md#1">黎巴嫩首都爆炸 蘑菇云腾起 数千死伤</a></li>
-<li><a href="https://github.com/ryqken3354/djy/blob/master/gb/20/8/5/n12308101.md#1">中共肺炎疫情升温 陈时中：8大场所应戴口罩</a></li>
-<li><a href="https://github.com/ryqken3354/djy/blob/master/gb/20/8/4/n12306881.md#1">【独家】党支部名单曝光 抖音何去何从</a></li>
-<li><a href="https://github.com/ryqken3354/djy/blob/master/gb/20/8/4/n12306639.md#1">细思极恐！大陆手机记录日常对话</a></li>
-<li><a href="https://github.com/ryqken3354/djy/blob/master/gb/20/8/3/n12304220.md#1">“战狼”吴京主演 中共高调开拍反美片引嘲讽</a></li>
-<li><a href="https://github.com/ryqken3354/djy/blob/master/gb/20/8/3/n12304444.md#1">59岁台湾艺人罗霈颖猝逝 死因待查</a></li>
-<li><a href="https://github.com/ryqken3354/djy/blob/master/gb/20/8/3/n12304056.md#1">北京下豪雨和冰雹 谢霆锋怨自家菜园受灾</a></li>
-<li><a href="https://github.com/ryqken3354/djy/blob/master/gb/20/8/4/n12306966.md#1">网爆“天王嫂训练营”潘玮柏郭富城被套路？</a></li>
-<li><a href="https://github.com/ryqken3354/djy/blob/master/gb/20/8/4/n12307256.md#1">探班只顾与高圆圆通话 赵又廷遭林更新戏说</a></li>
-<li><a href="https://github.com/ryqken3354/djy/blob/master/gb/20/7/24/n12279753.md#1">落榜士子痛骂考官  因何转运金榜题名？</a></li>
-<li><a href="https://github.com/ryqken3354/djy/blob/master/gb/20/8/2/n12301623.md#1">一个奇梦揭示鸦片膏在另外空间的表现</a></li>
-<li><a href="https://github.com/ryqken3354/djy/blob/master/gb/20/8/3/n12304112.md#1">麒麟阁功臣榜排名第二 张安世“满而不溢”</a></li>
-<li><a href="https://github.com/ryqken3354/djy/blob/master/gb/20/8/2/n12300632.md#1">春秋时代一场陨石雨  天人感应预兆证验不爽？</a></li>
-<li><a href="https://github.com/ryqken3354/djy/blob/master/gb/20/8/3/n12302128.md#1">【涛哥侃封神】第四回 恩州驿狐狸死妲己</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/4/20/n13716382.md#1">【百年真相】打抱不平的侠女 为何被枪杀取肾？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/15/n13737123.md#1">一曲《梅花》为何总让人禁不住热泪盈眶</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738009.md#1">【未解之谜】动物的超能力</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/13/n13734962.md#1">【未解之谜】霍皮预言“大净化” 毁灭与希望同在？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/4/n13726629.md#1">【命相漫谈】怎么说“财多如何不发财？”</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/13/n13735181.md#1">【思想领袖】封锁对疫情不起作用 且特别有害（中）</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13740248.md#1">【远见快评】美媒曝东航坠毁是人为 东航回应</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13740132.md#1">【财商天下】核检日赚一亿 钱进了谁的口袋？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739318.md#1">备战台海 广东高层会议秘密录音曝光</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738761.md#1">获妈妈沈殿霞赠家传首饰 郑欣宜望代代相传</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739256.md#1">李克强讲话“上墙”党媒争相报 释何信号</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738761.md#1">获妈妈沈殿霞赠家传首饰 郑欣宜望代代相传</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13739984.md#1">任贤齐介绍田中老家 吃喝不花钱自嘲像恶霸</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739409.md#1">刘嘉玲为学霸侄子庆生 亿万身家未来或留给对方</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13739664.md#1">赵小侨怀孕30周报喜 晒孕照“想得更多祝福 ”</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739444.md#1">陈晓旭去世15周年 薛宝钗扮演者张莉贴照缅怀</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739418.md#1">癌细胞没它会饿死？1个防癌绝佳方法 人人能做到</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13739808.md#1">搭飞机如何穿衣服比较好？ 空服员分享经验</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/13/n13735397.md#1">心脏衰竭比癌症更致命！年轻也出现 3症状要警惕</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/14/n13736831.md#1">11种营养和饮食 改善成人过动症</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738702.md#1">【健康1+1】新冠、疫苗刺突蛋白 2大方法解毒</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ryqken3354/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ryqken3354/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/2/20/n11057150.htm">非洲猪瘟腐尸污染水土 病毒藏人体内危害大</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/xsumwp3307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/xsumwp3307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/2/20/n11057150.htm">非洲猪瘟腐尸污染水土 病毒藏人体内危害大</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://www.szzd.org/v.php?action=qrcode&url=https://github.com/ryqken3354/djy/blob/master/gb/19/2/20/n11057150.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ryqken3354/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ryqken3354/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ryqken3354/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ryqken3354/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ryqken3354/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ryqken3354/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ryqken3354/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ryqken3354/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ryqken3354/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ryqken3354/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ryqken3354/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ryqken3354/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ryqken3354/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ryqken3354/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ryqken3354/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ryqken3354/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ryqken3354/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ryqken3354/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/ryqken3354/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ryqken3354/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ryqken3354/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ryqken3354/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ryqken3354/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ryqken3354/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/ryqken3354/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ryqken3354/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ryqken3354/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ryqken3354/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ryqken3354/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ryqken3354/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ryqken3354/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ryqken3354/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ryqken3354/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ryqken3354/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ryqken3354/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ryqken3354/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ryqken3354/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ryqken3354/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ryqken3354/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ryqken3354/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ryqken3354/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ryqken3354/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ryqken3354/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ryqken3354/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ryqken3354/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ryqken3354/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ryqken3354/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ryqken3354/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/xsumwp3307/djy/blob/master/gb/19/2/20/n11057150.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/xsumwp3307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/xsumwp3307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
